<resources>
    <string name="app_name">Android Developer Fundamentals</string>
    <string name="login">LOGIN</string>
    <string name="phone_hint">Phone</string>
    <string name="email_hint">Email</string>
    <string name="submit_button">submit</string>
    <string name="accept_t_c"><![CDATA[I accept T&C]]></string>
    <string name="error_email_input">Fill the input with a valid email address</string>
    <string name="error_phone_input">Fill the input with a phone number</string>
    <string name="error_is_accepted_input">Check should be accepted</string>
    <string name="srollview">SrollView: A view group that allows the view hierarchy placed within it to be scrolled. Scroll view may have only one direct child placed within it. To add multiple views within the scroll view, make the direct child you add a view group, for example LinearLayout and place additional views within that LinearLayout.</string>
    <string name="call">Call</string>
    <string name="notice">Notice</string>
    <string name="alert_title">Alert Title</string>
    <string name="launch_app">Launch app</string>
    <string name="reminde_me">Reminde me</string>
    <string name="click">Click</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_1">Number 1</string>
    <string name="number_2">Number 2</string>
    <string name="title_activity_cc6_week6">CC6Week6Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cc7_week6">CC7Week6Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
