<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#C6162B"
        android:textStyle="bold"
        android:layout_margin="@dimen/margin_elements"
        android:textSize="@dimen/text_size"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:layout_marginEnd="@dimen/margin_elements"
        android:layout_marginStart="@dimen/margin_elements"
        android:inputType="textEmailAddress"
        android:id="@+id/edittext_email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_hint"
        android:layout_marginEnd="@dimen/margin_elements"
        android:layout_marginStart="@dimen/margin_elements"
        android:inputType="phone"
        android:id="@+id/edittext_phone"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept_t_c"
        android:layout_marginEnd="@dimen/margin_elements"
        android:layout_marginStart="@dimen/margin_elements"
        android:id="@+id/checkbox_accept"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/submit_button"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:layout_margin="@dimen/margin_elements"
        android:id="@+id/button_submit"
        android:onClick="btnSubmitOnClick"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview_result"/>

</LinearLayout>